syntax = "proto3";

package org.project_planton.provider.digitalocean.digitaloceanloadbalancer.v1;

import "buf/validate/validate.proto";
import "org/project-planton/provider/digitalocean/digitaloceanloadbalancer/v1/spec.proto";
import "org/project-planton/provider/digitalocean/digitaloceanloadbalancer/v1/stack_outputs.proto";
import "org/project-planton/shared/metadata.proto";

// digital-ocean-load-balancer
message DigitalOceanLoadBalancer {
  //api-version
  string api_version = 1 [(buf.validate.field).string.const = 'digital-ocean.project-planton.org/v1'];

  //resource-kind
  string kind = 2 [(buf.validate.field).string.const = 'DigitalOceanLoadBalancer'];

  //metadata
  org.project_planton.shared.CloudResourceMetadata metadata = 3 [(buf.validate.field).required = true];

  //spec
  DigitalOceanLoadBalancerSpec spec = 4 [(buf.validate.field).required = true];

  //status
  DigitalOceanLoadBalancerStatus status = 5;
}

// digital-ocean-load-balancer status
message DigitalOceanLoadBalancerStatus {
  //stack-outputs
  //  digital-ocean-load-balancer stack-outputs
  DigitalOceanLoadBalancerStackOutputs outputs = 1;
}
