syntax = "proto3";

package org.project_planton.provider.gcp.gcpcertmanagercert.v1;

// GcpCertManagerCertStackOutputs describes values returned by Pulumi/Terraform
// after provisioning a GCP certificate.
message GcpCertManagerCertStackOutputs {
  // certificate_id is the identifier of the created certificate resource.
  // For Certificate Manager: the certificate ID.
  // For Load Balancer: the SSL certificate ID.
  string certificate_id = 1;

  // certificate_name is the full resource name of the created certificate.
  // Example: "projects/my-project/locations/global/certificates/my-cert"
  string certificate_name = 2;

  // certificate_domain_name is the primary domain name for which the certificate was issued.
  string certificate_domain_name = 3;

  // certificate_status represents the validation or provisioning status of the certificate.
  // Possible values: "ACTIVE", "PROVISIONING", "FAILED", etc.
  string certificate_status = 4;
}
